Fixed issue with slider images going over text during transition by adding high positive index along with white background to slider info text and slider buttons so they hide the images behind them.

--- a/style.scss
+++ b/style.scss
@@ -75,12 +75,10 @@ footer {
             flex-direction: row-reverse;
             column-gap: 9px;
             transition: transform 1s linear;
-
             > img {
                 height: 200px;
                 width: auto;
                 border-radius: 5px;
-                position: relative;
             }
         }
 
@@ -103,7 +101,10 @@ footer {
             .slider-btns {
                 display: flex;
                 flex-direction: column;
-                margin-left: auto;
+                width: 100%;
+                padding-left: 100px;
+                z-index: 100;
+                background-color: white;
 
                 > button {
                     background-color: white;
@@ -132,7 +133,9 @@ footer {
     .slider-info {
         font-family: $font-main;
         font-style: normal;
-        margin-left: 20px;
+        padding-left: 20px;
+        z-index: 100;
+        background-color: white;
         h2 {
             font-weight: bold;
             font-size: 32px;
